--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.408.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.12",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
